fix line height for collapse button properly

--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -134,10 +134,13 @@ nav {
     opacity: 0; 
 }
 
-nav .button-collapse {
-    line-height: 45px;
-    height: 45px;
+nav .button-collapse {        
     color: #6d9eeb !important;
+}
+
+nav, nav .nav-wrapper i, nav a.button-collapse, nav a.button-collapse i {
+    line-height: 45px !important;
+    height: 45px !important;
 }
 
 #sidenav-overlay {
